--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,23 @@
 
 .container {
     background-color: black;
+    display: grid;
+    grid-template-columns: [first] 1fr [main-start] 2fr [main-end] 1fr [last];
+    grid-template-rows: repeat(5, 10rem);
+    column-gap: 1rem;
+    row-gap: 1rem;
+    font-size: 3rem;
+
 }
 
 .child-1 {
     background-color: rgb(255, 227, 137);
+    grid-area: 1 / first / 1 / last;
 }
 
 .child-2 {
     background-color: rgb(255, 141, 141);
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
+    grid-area: 2 / 2 / 4 / 3
 }
 
 .child-3 {
@@ -43,8 +50,11 @@
 
 .child-9 {
     background-color: rgb(255, 186, 38);
+    justify-self: center;
 }
 
+/* grid-area: [row-start] / [column-start] / [row-end] / [column-end] */
 .child-10 {
     background-color: rgb(149, 137, 255);
+    grid-area: 5 / 2 / 6 / 4 
 }
